When editing an account always unset any password stored by Mission Control

BUG: 291210